--- a/client/index.html
+++ b/client/index.html
@@ -100,12 +100,21 @@
         }
 
         socket.on('userList', ({ room, userList }) => {
-            const usersElement = roomUsers;
-            usersElement.innerHTML = '';
-            userList.forEach((userId) => {
-                const p = document.createElement('p');
-                p.textContent = userId;
-                usersElement.appendChild(p);
+            const enteredRoom = room;
+            socket.emit('getCurrentRoomInfo', (roomInfo) => {
+                if (roomInfo) {
+                    const { room } = roomInfo;
+
+                    if (enteredRoom === room) {
+                        const usersElement = roomUsers;
+                        usersElement.innerHTML = '';
+                        userList.forEach((user) => {
+                            const p = document.createElement('p');
+                            p.textContent = user.nick;
+                            usersElement.appendChild(p);
+                        });
+                    }
+                }
             });
         });
 
