메시지 전송 시 시간 표시

--- a/client/index.html
+++ b/client/index.html
@@ -100,7 +100,8 @@
             const li = document.createElement('li');
             li.className = 'chat-item';
             const p = document.createElement('p');
-            p.textContent = message;
+            const time = new Date().toLocaleTimeString();
+            p.textContent = `${time} - ${message}`;
             li.appendChild(p);
             chatList.appendChild(li);
 
