타이핑 인디케이터 문구 수정

--- a/client/index.html
+++ b/client/index.html
@@ -28,7 +28,7 @@
                 <div class="chat-container" id="room-chat-container">
                     <ul class="chat-list" id="room-chat-list"></ul>
                 </div>
-                <div id="typing-indicator" style="display: none;">상대방이 입력 중입니다...</div>
+                <div id="typing-indicator" style="display: none;">입력 중입니다...</div>
                 <div class="chat-input">
                     <input type="text" class="room-message-input" id="room-message-input" placeholder="메시지를 입력하세요."
                         onkeyup="sendMessage(event)" />
