--- a/client/index.html
+++ b/client/index.html
@@ -20,7 +20,6 @@
                         <button onclick="exitRoom()">퇴장</button>
                     </div>
                 </header>
-                <div class="users" id="room-users"></div>
                 <div class="user-list">
                     <h3>입장한 사용자 목록</h3>
                     <ul id="user-list"></ul>
@@ -42,7 +41,6 @@
         const socket = io();
 
         let currentRoom = 'room - 0';
-        const roomUsers = document.getElementById('room-users');
         const userListContainer = document.getElementById('user-list');
         const roomChatList = document.getElementById('room-chat-list');
         const roomChatContainer = document.getElementById('room-chat-container');
@@ -75,7 +73,6 @@
         }
 
         const clearUserList = () => {
-            roomUsers.innerHTML = '';
             userListContainer.innerHTML = '';
             roomChatList.innerHTML = '';
         }
@@ -128,14 +125,14 @@
                     const { room } = roomInfo;
 
                     if (enteredRoom === room) {
-                        const usersElement = roomUsers;
+                        /*const usersElement = roomUsers;
                         usersElement.innerHTML = '';
 
                         userList.forEach((user) => {
                             const p = document.createElement('p');
                             p.textContent = user.nick;
                             usersElement.appendChild(p);
-                        });
+                        });*/
 
                         updateUserList(userList);
                     }
@@ -145,21 +142,23 @@
 
         socket.on('userJoined', ({ userId, room }) => {
             appendMessage(room, `${userId}님이 방에 입장했습니다.`);
+            addUserToList(userId);
 
-            const listItem = document.createElement('li');
+            /*const listItem = document.createElement('li');
             listItem.textContent = userId;
-            userListContainer.appendChild(listItem);
+            userListContainer.appendChild(listItem);*/
         });
 
         socket.on('userLeft', ({ userId, room }) => {
             appendMessage(room, `${userId}님이 방을 떠났습니다.`);
+            removeUserFromList(userId);
 
-            const userListItems = userListContainer.getElementsByTagName('li');
+            /*const userListItems = userListContainer.getElementsByTagName('li');
             Array.from(userListItems).forEach(item => {
                 if (item.textContent === userId) {
                     item.remove();
                 }
-            });
+            });*/
         });
 
         socket.on('chatMessage', ({ userId, message, room }) => {
@@ -200,8 +199,23 @@
             userListContainer.innerHTML = '';
             users.forEach((user) => {
                 const listItem = document.createElement('li');
-                listItem.textContent = user;
+                listItem.textContent = user.nick;
                 userListContainer.appendChild(listItem);
+            });
+        }
+
+        function addUserToList(userId) {
+            const listItem = document.createElement('li');
+            listItem.textContent = userId;
+            userListContainer.appendChild(listItem);
+        }
+
+        function removeUserFromList(userId) {
+            const userListItems = userListContainer.getElementsByTagName('li');
+            Array.from(userListItems).forEach(item => {
+                if (item.textContent === userId) {
+                    item.remove();
+                }
             });
         }
 
