--- a/client/index.html
+++ b/client/index.html
@@ -121,6 +121,7 @@
         const requestNotificationPermission = () => {
             if (Notification.permission !== 'granted') {
                 Notification.requestPermission().then(permission => {
+                    console.log('Notification permission status:', permission);
                     if (permission === 'granted') {
                         console.log("Notification permission granted.");
                     }
